--- a/cm-app/src/styles.css
+++ b/cm-app/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+BODY {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Play', sans-serif;
+    overflow: hidden;
+}
+
+#app_container {
+    width: 80%;
+    margin-left: 10%;
+    border-left: 1px solid #666;
+    border-right: 1px solid #666;
+}
