connected Angular menu with backend

--- a/cm-app/src/app/player/player.component.html
+++ b/cm-app/src/app/player/player.component.html
@@ -1,5 +1,5 @@
 <ul>
     <li *ngFor="let player of players">
-            {{player.firstname}} {{player.infix}} {{player.lastname}}
+            {{player.firstName}} {{player.infix}} {{player.lastName}}
     </li>
 </ul>
