added teamdetail page

--- a/cm-app/src/app/team-list/team-list.component.html
+++ b/cm-app/src/app/team-list/team-list.component.html
@@ -1,5 +1,7 @@
-<ul>
-    <li *ngFor="let team of teams">
-         <a routerLink="{{team.id}}">{{team.name}}</a>
-    </li>
-</ul>
+<div class="detailContainer">
+    <ul>
+        <li *ngFor="let team of teams">
+             <a routerLink="{{team.id}}">{{team.name}}</a>
+        </li>
+    </ul>
+</div>
